k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devnotes-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
